--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,13 +1,3 @@
-<ion-content class="ion-padding">
-  <ion-slides pager="true" [options]="slideOpt">
-    <ion-slide *ngFor="let slide of slides">
-      <ion-icon name="close"></ion-icon>
-      <img src="assets/img/logo.png" alt="Platzi Master Logo">
-      <h1>{{ slide.title }}</h1>
-      <h2>{{ slide.subtitle }}</h2>
-      <p>{{ slide.description }}</p>
-      <ion-icon name="{{ slide.icon }}"></ion-icon>
-    </ion-slide>
-
-  </ion-slides>
+<ion-content>
+  <h1>Este es el home y está vacío</h1>
 </ion-content>
