--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -2,4 +2,10 @@
   <figure class="ion-padding" class="ion-text-center" >
     <img src="assets/img/logo.png" alt="Logo de Platzi Master">
   </figure>
+  <form [formGroup]="loginForm" (ngSubmit)="loginUser(loginForm.value)">
+    <ion-item>
+      <ion-label>Email</ion-label>
+      <ion-input formControlName="email"></ion-input>
+    </ion-item>
+  </form>
 </ion-content>
